tests/invalid/syntax_err_do_no_semicolon.c
int main() {
    do
        3;
    while (4)
}
// ERROR: Line 3, Error 2003